gitops/workloads/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: frontend
             port:
               number: 80
